Adicionando da parte mobile section, nav-bar normal e lateral, conteudo dentro delas, nomeando classes e imagens

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Folio Agency</title>
 </head>
 <body>
-    
+    <section class="container-home-mobile">
+        <header class="nav-mobile">
+            <a href=""><img src="./imagens/mobile/home/logo-mobile.svg" class="logo-mobile" alt="Logo"></a>
+            <button class="nav-menu"><img src="./imagens/mobile/home/burger-icon-mobile.svg" alt="Imagem para o menu"></button>
+        </header>
+        <nav class="menu-laterel-mobile">
+            <div class="nav-ativo-mobile-logo">
+                <img src="./imagens/mobile/home/logo-menu-mobile.svg" class="logo-mobile" alt="Logo">
+                <button class="nav-inicial-menu-fechar"><img src="./imagens/mobile/home/fechar-icon-mobile.svg" alt="Imagem de um X para fechar menu"></button>
+            </div>
+            <div class="menu-lateral-links">
+                <a href="work.html" class="menu-lateral-itens">Work</a>
+                <a href="about.html" class="menu-lateral-itens">About</a>
+                <a href="service.html" class="menu-lateral-itens">Services</a>
+                <a href="cta.html" class="menu-lateral-itens">Jobs</a>
+            </div>
+            <div class="icons-redes-sociais">
+                <ul class="lista-redes-sociais">
+                    <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
+                    <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
+                    <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
+                </ul>
+            </div>
+        </nav>
+    </section>
 </body>
 </html>
