Adicionando a parte do conteudo de home já com suas classes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
                 </ul>
             </div>
         </nav>
+        <div class="informacoes-home-mobile">
+            <h3>Stand Out from The Crowd.</h3>
+            <p>Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+            <a href="notfound.html"><button>Recent Work</button></a>
+        </div>
+        <img src="./imagens/mobile/home/imagem-primeira-pagina-mobile.svg" alt="Arte digital de uma tela de computador" class="imagem-home-mobile">
+        <div class="botao-pular-pagina">
+            <a href="about.html"><button class="botao-esquerda"><img src="./imagens/mobile/home/botao-esquerda.svg" alt="Seta para proxima página"></button></a>
+        </div>
     </section>
 </body>
 </html>
