Adicionando codigo do footer ja com suas classes e imagens

--- a/index.html
+++ b/index.html
@@ -41,5 +41,34 @@
             <a href="about.html"><button class="botao-esquerda"><img src="./imagens/mobile/home/botao-esquerda.svg" alt="Seta para proxima página"></button></a>
         </div>
     </section>
+    <footer>
+        <div class="card-footer">
+            <div class="card-primeiro-conteudo">
+                <img src="./imagens/mobile/home/balao-footer.svg" alt="Arte digital de um balão de conversa">
+                <h4>👋 Say hello</h4>
+                <h3>A design team building a curated marketplace for UI designers.</h3>
+            </div>
+            <hr class="linha-footer">
+            <div class="card-segundo-conteudo">
+                <h1>Let's talk about your next project</h1>
+                <a href=""><button>Contact Us</button></a>
+            </div>
+        </div>
+        <div class="card-redes-footer">
+            <img src="./imagens/mobile/home/logo-mobile.svg" alt="Logo">
+            <p>Agency is a full-service agency, busy designing and building.</p>
+            <div class="select-footer">
+                <select name="" id="">
+                    <option value="">Home</option>
+                </select>
+            </div>
+            <ul class="lista-redes-sociais lista-redes-footer">
+                <li class="item-redes-sociais footer-icon-fb"><a href=""><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
+                <li class="item-redes-sociais item-redes-footer"><a href=""><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
+                <li class="item-redes-sociais item-redes-footer"><a href=""><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
+            </ul>
+            <p class="direitos-footer">© 2020, UI8 LLC.</p>
+        </div>
+    </footer>
 </body>
 </html>
