Corrigindo nome da class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="menu-laterel-mobile">
             <div class="nav-ativo-mobile-logo">
                 <img src="./imagens/mobile/home/logo-menu-mobile.svg" class="logo-mobile" alt="Logo">
-                <button class="nav-inicial-menu-fechar"><img src="./imagens/mobile/home/fechar-icon-mobile.svg" alt="Imagem de um X para fechar menu"></button>
+                <button class="nav-menu-fechar"><img src="./imagens/mobile/home/fechar-icon-mobile.svg" alt="Imagem de um X para fechar menu"></button>
             </div>
             <div class="menu-lateral-links">
                 <a href="work.html" class="menu-lateral-itens">Work</a>
