link adicionado na logo pra direcionar pro index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="container-home-mobile">
         <header class="nav-mobile">
-            <a href=""><img src="./imagens/mobile/home/logo-mobile.svg" class="logo-mobile" alt="Logo"></a>
+            <a href="index.html"><img src="./imagens/mobile/home/logo-mobile.svg" class="logo-mobile" alt="Logo"></a>
             <button class="nav-menu"><img src="./imagens/mobile/home/burger-icon-mobile.svg" alt="Imagem para o menu"></button>
         </header>
         <nav class="menu-laterel-mobile">
@@ -57,7 +57,7 @@
             <hr class="linha-footer">
             <div class="card-segundo-conteudo">
                 <h1>Let's talk about your next project</h1>
-                <a href=""><button>Contact Us</button></a>
+                <a href="notfound.html"><button>Contact Us</button></a>
             </div>
         </div>
         <div class="card-redes-footer">
@@ -69,9 +69,9 @@
                 </select>
             </div>
             <ul class="lista-redes-sociais lista-redes-footer">
-                <li class="item-redes-sociais footer-icon-fb"><a href=""><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
-                <li class="item-redes-sociais item-redes-footer"><a href=""><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
-                <li class="item-redes-sociais item-redes-footer"><a href=""><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
+                <li class="item-redes-sociais footer-icon-fb"><a href="notfound.html"><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
+                <li class="item-redes-sociais item-redes-footer"><a href="notfound.html"><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
+                <li class="item-redes-sociais item-redes-footer"><a href="notfound.html"><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
             </ul>
             <p class="direitos-footer">© 2020, UI8 LLC.</p>
         </div>
