Colocando classe no menu ativo no lugar certo

--- a/service.html
+++ b/service.html
@@ -26,8 +26,8 @@
             </div>
             <div class="menu-lateral-links">
                 <a href="work.html" class="menu-lateral-itens">Work</a>
-                <a href="about.html" class="menu-lateral-itens link-lateral-ativo">About</a>
-                <a href="service.html" class="menu-lateral-itens">Services</a>
+                <a href="about.html" class="menu-lateral-itens">About</a>
+                <a href="service.html" class="menu-lateral-itens link-lateral-ativo">Services</a>
                 <a href="cta.html" class="menu-lateral-itens">Jobs</a>
             </div>
             <div class="icons-redes-sociais">
