Mudando link que as setas levam

--- a/work.html
+++ b/work.html
@@ -44,8 +44,8 @@
             <h1>Our Partnerships.</h1>
             <p>Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
             <div class="setas">
-                <a href="about.html"><button class="botao-direita"><img src="./imagens/mobile/work/botao-direita.svg" alt="Seta para pagina anterior"></button></a>
-                <a href="work.html"><button class="botao-esquerda"><img src="./imagens/mobile/work/botao-esquerda.svg" alt="Seta para proxima pagina"></button></a>
+                <a href="service.html"><button class="botao-direita"><img src="./imagens/mobile/work/botao-direita.svg" alt="Seta para pagina anterior"></button></a>
+                <a href="cta.html"><button class="botao-esquerda"><img src="./imagens/mobile/work/botao-esquerda.svg" alt="Seta para proxima pagina"></button></a>
             </div>
         </div>
         <div class="cards-work-mobile">
