Colocando parte de responsividade no tablet

--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
             <a href="about.html"><button class="botao-esquerda"><img src="./imagens/mobile/home/botao-esquerda.svg" alt="Seta para proxima página"></button></a>
         </div>
     </section>
+    <section class="container-home">
+        <nav class="nav-bar">
+            <a href="index.html"><img src="./imagens/mobile/home/responsividade/logo.svg" alt=""></a>
+            <ul class="lista-link">
+                <li class="item-link"><a href="about.html">About</a></li>
+                <li class="item-link"><a href="work.html">Work</a></li>
+                <li class="item-link"><a href="service.html">Services</a></li>
+                <li class="item-link"><a href="cta.html">Jobs</a></li>
+            </ul>
+            <div class="notificacao">
+                <h3>2</h3>
+            </div>
+            <a href="notfound.html"><button>Contact Us</button></a>
+        </nav>
+        <div class="informacoes-home">
+            <h3>Stand Out from The Crowd.</h3>
+            <p>Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+            <a href="notfound.html"><button>Recent Work</button></a>
+        </div>
+        <div class="seta-proxima">
+            <a href="about.html"><img src="./imagens/mobile/home/responsividade/Seta-proxima-pagina.svg" alt=""></a>
+            <h3>Click to explore</h3>
+        </div>
+    </section>
     <footer>
         <div class="card-footer">
             <div class="card-primeiro-conteudo">
