Adicionando footer responsivo tablet

--- a/about.html
+++ b/about.html
@@ -95,6 +95,46 @@
             </ul>
             <p class="direitos-footer">© 2020, UI8 LLC.</p>
         </div>
+        <div class="mostrar-footer">
+            <div class="card1-footer">
+                <div class="part1-card-footer">
+                    <img src="./imagens/mobile/home/responsividade/imagem1-card1-footer.svg" alt="">
+                    <h4>👋 Say hello</h4>
+                    <h3>A design team building a curated marketplace for UI designers.</h3>
+                </div>
+                <!--<hr class="linha-card1-footer">-->
+                <div class="parte-baixo-card1-footer">
+                    <div class="part2-card-footer">
+                        <h1>Let's talk about your next project</h1>
+                    </div>
+                    <div class="part3-card-footer">
+                        <img src="./imagens/mobile/home/responsividade/imagem2-card1-footer.svg" alt="Arte digital balão de conversa">
+                        <h3>Invest in your designs today!</h3><a href=""><button><img src="./imagens/mobile/home/responsividade/Seta-card-footer.svg" alt="Seta"></button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="card2-footer">
+                <div class="card-links-footer">
+                    <img src="./imagens/mobile/home/logo-mobile.svg" alt="Logo">
+                    <p>Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+                    <ul class="lista-link lista-link-footer">
+                        <li class="item-link"><a href="about.html">About</a></li>
+                        <li class="item-link"><a href="work.html">Work</a></li>
+                        <li class="item-link"><a href="service.html">Services</a></li>
+                        <li class="item-link"><a href="cta.html">Jobs</a></li>
+                    </ul>
+                </div>
+                <div class="redes-footer">
+                    <p class="direitos-footer tamanho-direito-footer">© 2020, UI8 LLC.</p>
+                    <h3>Follow us</h3>
+                    <ul class="lista-redes-sociais lista-redes-sociais-footer">
+                        <li class="item-redes-sociais item-link-footer"><a href="notfound.html"><img src="./imagens/mobile/home/responsividade/icon-facebook-footer.svg" alt="Icon Facebook"></a></li>
+                        <li class="item-redes-sociais item-link-footer"><a href="notfound.html"><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
+                        <li class="item-redes-sociais item-link-footer"><a href="notfound.html"><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="index.js"></script>
 </body>
