Adicionando notfound.html onde falta

--- a/cta.html
+++ b/cta.html
@@ -31,9 +31,9 @@
         </div>
         <div class="icons-redes-sociais">
             <ul class="lista-redes-sociais">
-                <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
-                <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
-                <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
+                <li class="item-redes-sociais"><a href="notfound.html"><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
+                <li class="item-redes-sociais"><a href="notfound.html"><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
+                <li class="item-redes-sociais"><a href="notfound.html"><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
             </ul>
         </div>
     </nav>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="part3-card-footer">
                         <img src="./imagens/mobile/home/responsividade/imagem2-card1-footer.svg" alt="Arte digital balão de conversa">
-                        <h3>Invest in your designs today!</h3><a href=""><button><img src="./imagens/mobile/home/responsividade/Seta-card-footer.svg" alt="Seta"></button></a>
+                        <h3>Invest in your designs today!</h3><a href="notfound.html"><button><img src="./imagens/mobile/home/responsividade/Seta-card-footer.svg" alt="Seta"></button></a>
                     </div>
                 </div>
             </div>
