--- a/notfound.html
+++ b/notfound.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="part3-card-footer">
                         <img src="./imagens/mobile/home/responsividade/imagem2-card1-footer.svg" alt="Arte digital balão de conversa">
-                        <h3>Invest in your designs today!</h3><a href=""><button><img src="./imagens/mobile/home/responsividade/Seta-card-footer.svg" alt="Seta"></button></a>
+                        <h3>Invest in your designs today!</h3><a href="notfound.html"><button><img src="./imagens/mobile/home/responsividade/Seta-card-footer.svg" alt="Seta"></button></a>
                     </div>
                 </div>
             </div>
