Adicionando notfound.html onde falta

--- a/work.html
+++ b/work.html
@@ -31,9 +31,9 @@
         </div>
         <div class="icons-redes-sociais">
             <ul class="lista-redes-sociais">
-                <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
-                <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
-                <li class="item-redes-sociais"><a href=""><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
+                <li class="item-redes-sociais"><a href="notfound.html"><img src="./imagens/mobile/home/logo-facebook.svg" alt="Icon Facebook"></a></li>
+                <li class="item-redes-sociais"><a href="notfound.html"><img src="./imagens/mobile/home/logo-youtube.svg" alt="Icon Youtube"></a></li>
+                <li class="item-redes-sociais"><a href="notfound.html"><img src="./imagens/mobile/home/logo-instagram.svg" alt="Icon Instagram"></a></li>
             </ul>
         </div>
     </nav>
